[gd_scene load_steps=4 format=3 uid="uid://combat_team_selection_modal"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/combat_team_selection_modal.gd" id="1_modal_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.12, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.96, 0.26, 0.21, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_top = 12.0
content_margin_right = 16.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_enemy_info"]
bg_color = Color(0.2, 0.1, 0.1, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.96, 0.26, 0.21, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[node name="CombatTeamSelectionModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_modal_script")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(360, 480)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -240.0
offset_right = 180.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleIcon" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚öîÔ∏è"
vertical_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "Select Combat Team"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚úï"

[node name="EnemyInfoSection" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_enemy_info")

[node name="EnemyInfoContent" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="EnemyTitleRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection/EnemyInfoContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnemyIcon" type="Label" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection/EnemyInfoContent/EnemyTitleRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üêæ"
vertical_alignment = 1

[node name="EnemyTitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection/EnemyInfoContent/EnemyTitleRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.96, 0.26, 0.21, 1)
theme_override_font_sizes/font_size = 14
text = "Enemy: Wild Herd (3 animals)"
vertical_alignment = 1

[node name="EnemyDetailsRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection/EnemyInfoContent"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="EnemyStrengthLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection/EnemyInfoContent/EnemyDetailsRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 13
text = "üí™ Strength: 12"
vertical_alignment = 1

[node name="EnemyAnimalIcons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/EnemyInfoSection/EnemyInfoContent/EnemyDetailsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimalListLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Your Animals:"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="AnimalListContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="NoAnimalsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Select animals to form your combat team"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamSummarySection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TeamCountRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TeamCountIcon" type="Label" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection/TeamCountRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üë•"
vertical_alignment = 1

[node name="TeamCountLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection/TeamCountRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Team: 0/5 selected"
vertical_alignment = 1

[node name="TeamStrengthLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection/TeamCountRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "üí™ 0"
vertical_alignment = 1

[node name="DifficultyRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DifficultyIcon" type="Label" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection/DifficultyRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚ö†Ô∏è"
vertical_alignment = 1

[node name="DifficultyLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.76, 0.03, 1)
theme_override_font_sizes/font_size = 14
text = "Difficulty: --"
vertical_alignment = 1

[node name="WarningBanner" type="Label" parent="Panel/MarginContainer/VBoxContainer/TeamSummarySection"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.96, 0.26, 0.21, 1)
theme_override_font_sizes/font_size = 14
text = "‚ö†Ô∏è Your team may struggle against this herd!"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Cancel"

[node name="FightButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "‚öîÔ∏è FIGHT"
tooltip_text = "Select at least 1 animal"
